crates/strider-analyze/tests/snapshots/v3__x86__control__early_return.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "10" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "13" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "13" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="φ EAX", shape=house, fillcolor="#163030"];
  "13" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="φ ECX", shape=house, fillcolor="#163030"];
  "9" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "27" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "27" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "18" -> "27" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "19" -> "27" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
